# tapo-exporter

./: .dockerignore  .editorconfig  .env.example  .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  mypy.ini  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  convert_bandit_to_sarif.py  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  deploy.yml  deploy.yml.disabled  docker-build.yml  manual-release.yml  release-drafter-dev.yml  release-drafter.yml  release-notes.yml  test.yml
grafana/provisioning/dashboards/: DASHBOARD_STRUCTURE.md  dashboards.yml  tapo_dashboard.json  tapo_historical.json  test-dashboard.json
tapo_exporter/: __init__.py  __main__.py  exporter.py  metrics.py
tapo_exporter/devices/: __init__.py  base.py  p110.py
tests/: __init__.py  conftest.py  test_devices.py  test_exporter.py  test_kasa.py  test_main.py  test_metrics.py
