[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapo-exporter"
version = "0.1.0"
description = "A Prometheus and InfluxDB exporter for Tapo smart devices"
authors = [
    {name = "j4v3l", email = "jj4v3l@gmail.com"},
]
dependencies = [
    "prometheus-client>=0.19.0",
    "influxdb-client>=1.36.0",
    "python-dotenv>=1.0.0",
    "tapo>=0.8.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.scripts]
tapo-exporter = "tapo_exporter.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["tapo_exporter"]
lines_between_types = 0
lines_between_sections = 1
no_lines_before = ["THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "--cov=tapo_exporter --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["tapo_exporter"]

[tool.sonar]
projectKey = "tapo-exporter"
projectName = "Tapo Exporter"
projectVersion = "0.1.0"
sources = ["tapo_exporter"]
tests = ["tests"]
sourceEncoding = "UTF-8"
python.version = "3.8"
python.coverage.reportPaths = [".coverage"]
